--- a/partials/std-header.njk
+++ b/partials/std-header.njk
@@ -1,6 +1,8 @@
 <header>
   <div class="header__content wrapper">
-    <a href="/">{{ metadata.navigation.home or metadata.siteName }}</a>
+    {% if page.url != "/" %}
+      <a href="/">{{ metadata.navigation.home or metadata.siteName }}</a>
+    {% endif %}
     <nav class="inline-list">
       {% for item in metadata.navigation.main %}
         <a href="{{ item.href }}" {% if item.href == page.url %}aria-current="page"{% endif %}>{{ item.text }}</a>
@@ -30,6 +32,7 @@ header {
 }
 
 .header__content a[aria-current="page"] {
+  font-weight: bold;
   text-decoration-line: underline;
   text-decoration-thickness: 0.1em;
   text-underline-offset: 2px;
