--- a/css/reset.css
+++ b/css/reset.css
@@ -12,9 +12,11 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   line-height: 1.5;
   margin: 0;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 h1, h2, h3, h4, button, input, label {
