--- a/partials/skip-to-main-content.njk
+++ b/partials/skip-to-main-content.njk
@@ -1,1 +1,1 @@
-<a href="#main-content" class="visually-hidden">Skip to main content</a>
+<a href="#main" class="visually-hidden">Skip to main content</a>
