Add alt text to inline list separator

--- a/css/utilities/inline-list.css
+++ b/css/utilities/inline-list.css
@@ -4,6 +4,6 @@
 }
 
 .inline-list *+*:before {
-  content: var(--inline-list-separator, "");
+  content: var(--inline-list-separator, "") / "";
   margin-inline: var(--size-xxs, 1ch);
 }
