Add 'md' shortcode for formatting properties
Allows using markdown in frontmatter properties, then rendering them like `{% md entry.data.title %}`

--- a/partials/links-prev-next.njk
+++ b/partials/links-prev-next.njk
@@ -3,12 +3,12 @@
 <ul class="links-nextprev">
   <li>
     {%- if prev %}
-      &larr; <a href="{{ prev.url }}">{{ prev.data.title or (prev.date | formatDate) }}</a>
+      &larr; <a href="{{ prev.url }}">{% md prev.data.title or (prev.date | formatDate) %}</a>
     {% endif %}
   </li>
   <li>
     {%- if next %}
-      <a href="{{ next.url }}">{{ next.title or (next.date | formatDate) }}</a> &rarr;
+      <a href="{{ next.url }}">{% md next.data.title or (next.date | formatDate) %}</a> &rarr;
     {% endif %}
   </li>
 </ul>
